fix z-index stacking issues and refine gallery/sidebar

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -54,31 +54,57 @@ html {
 
 #main-image-wrapper {
 	position: fixed;
+	z-index: 9999;
 	top: 0;
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background-color: rgba(0, 0, 0, 0.71);
-	z-index: 3;
+	background-color: rgb(0, 0, 0);
 	animation: fade-in 0.5s;
 }
 
 #main-image-container {
 	position: relative;
 	display: flex;
-	justify-content: space-around;
-	align-items: center;
+	flex-direction: column;
 	margin: auto;
+	align-items: center;
+}
+
+.full-image #main-image-container {
+	overflow: auto;
+	height: calc(100% - 18.4px);
+	max-width: 980px;
+}
+
+.grid #main-image-container {
 	max-width: 1280px;
 	height: 100%;
 }
 
-#main-image-container > div, #main-image-container img {
-	max-width: 797px;
+#main-image-container h2 {
+	font-family: "Barlow", sans-serif;
+	text-align: center;
+	padding: 0.5em;
+	color: #b88321;
+	font-size: 1.8em;
+	font-weight: 700;
+	letter-spacing: 0.25em;
+}
+
+#full-image-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	width: 100%;
 }
 
+#full-image-container img {
+	width: 83%;
+}
+
 #left-arrow, #right-arrow {
+	display: none;
 	user-select: none;
 	text-align: center;
 	min-width: 100px;
@@ -89,6 +115,10 @@ html {
 	font-family: "Barlow", sans-serif;
 }
 
+#exit-button {
+	cursor: pointer;
+}
+
 .no-scroll {
 	overflow: hidden;
 }
@@ -97,7 +127,32 @@ html {
 	/* IMPORTANT */
 	/* header can not be hidden behind #main-image-wrapper because #main-image-wrapper is a child while header is a top level parent so this is a hack for now*/
 	/* z-index: 0; or */
-	opacity: -1 !important;
+	pointer-events: none;
+	opacity: 0 !important;
+}
+
+.no-scroll #side-bar, .no-scroll #menu-button, .no-scroll #contact {
+	display: none;
+}
+
+#image-grid {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 10px;
+	gap: 5px;
+	overflow: auto;
+	text-align: center;
+}
+
+#image-grid img {
+	display: block;
+	object-fit: cover;
+	width: 100%;
+}
+
+#image-grid li {
+	flex: 1 0 40%;
+	padding: 5px;
 }
 
 
@@ -215,11 +270,9 @@ html {
 	} 
 }
 
-p, h2 {
+p, #social-container h2 {
 	font-family: "Nunito Sans", sans-serif;
-	font-optical-sizing: auto;
 	font-weight: 700;
-	font-style: normal;
 	line-height: 1.4em;
 }
 
@@ -258,7 +311,6 @@ p, h2 {
 
 a {
 	color: #b88321;
-	/* text-decoration: none; */
 }
 
 #header-list, #header-list ul {
@@ -285,11 +337,33 @@ a {
 }
 
 #side-bar {
+	z-index: 9999;
 	position: fixed;
 	top: 5%;
 	right: 0px;
-	z-index: 9999;
+	transition: transform 0.4s;
+	transform: translateX(100px);
 	width: 50px;
+}
+
+.expand-sidebar {
+	transform: translateX(0) !important;
+}
+
+#menu-button {
+	position: fixed;
+	background-color: #383838d6;
+	padding: 10px;
+	width: 30px;
+	right: 0;
+	top: 7%;
+	border-radius: 20px 0 0 20px;
+	animation: fade-in 0.4s forwards;
+	cursor: pointer;
+}
+
+#menu-button img {
+	pointer-events: none;
 }
 
 #icon-list {
@@ -333,6 +407,7 @@ a {
 }
 
 #header-list .name-intro {
+	font-weight: 600;
 	font-size: 1.4em;
 	letter-spacing: 0.25em;
 }
@@ -362,11 +437,6 @@ a {
 	transition-timing-function : linear;
 }
 
-/* swiper goes over the header so we need to push it back */
-.transition-gallery > .swiper { 
-	z-index: -1;
-}
-
 .swiper-slide img {
 	cursor: pointer;
 	width: 100%;
@@ -392,7 +462,6 @@ swiper-container {
 #body-container {
 	position: relative;
 	margin: auto;
-	z-index: -1;
 	max-width: 500px;
 	width: 80%;
 }
@@ -425,6 +494,27 @@ swiper-container {
 
 #main-content {
 	background-color: #191919;
+}
+
+#gallery-formats {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding: 20px;
+	width: calc(100% - 60px);
+}
+
+#gallery-formats > div {
+	display: flex;
+	gap: 20px;
+}
+
+#gallery-formats svg {
+	cursor: pointer;
+}
+
+.selected-gallery-format {
+	fill: white !important;
 }
 
 #gallery-container {
@@ -667,9 +757,30 @@ footer > span {
 	#side-bar {
 		display: none;
 	}
+
+	#left-arrow, #right-arrow {
+		display: initial;
+	}
+
+	#full-image-container img {
+		width: 100%;
+	}
+
+	#menu-button {
+		display: none;
+	}
+
+	#gallery-formats .icon {
+		height: 40px;
+		width: 40px;
+	}
+
+	#main-image-container h2 {
+		font-size: 2.3em;
+	}
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
 	#header {
 		width: calc(100% - 24px);
 		font-size: 1.5em;
@@ -718,7 +829,12 @@ footer > span {
 	footer nav span {
 		font-size: 1.5em;
 	}
+
+	#image-grid li {
+		flex: 1 0 21%;
+	}
 }
+
 
 @media (min-width: 1350px) {
 	#footer-container {
